--- a/booking.html
+++ b/booking.html
@@ -45,7 +45,7 @@
 
         <div class="one-container two">
             <div class="one-container-image">
-                <img src="/IMG/STWKBOOKING4.png" alt="" class="one-container-image__image">
+                <img src="/IMG/STWKBOOKING4.png" alt="" class="one-container-image__image two">
             </div>
 
             <div class="one-container-content">
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="image2 two">
+        <div class="image2">
             <img src="/IMG/STWKBOOKING7.jpg" alt="">
         </div>
 
