--- a/booking.html
+++ b/booking.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="image2">
-            <img src="/IMG/STWKBOOKING7.jpg" alt="">
+            <img src="/IMG/STWKBOOKING5.png" alt="">
         </div>
 
     </section>
