--- a/booking.html
+++ b/booking.html
@@ -55,6 +55,16 @@
             </div>
         </div>
 
+        <div class="one-container two">
+            <div class="one-container-image">
+                <img src="/IMG/STWKBOOKING7.jpg" alt="" class="one-container-image__image">
+            </div>
+
+            <div class="one-container-image">
+                <img src="/IMG/STWKBOOKING7.png" alt="" class="one-container-image__image two">
+            </div>
+        </div>
+
         <div class="image2">
             <img src="/IMG/STWKBOOKING5.png" alt="">
         </div>
