--- a/booking.html
+++ b/booking.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="one-container-image">
-                <img src="/IMG/STWKBOOKING7.png" alt="" class="one-container-image__image two">
+                <img src="/IMG/STWKBOOKING7.png" alt="" class="one-container-image__image">
             </div>
         </div>
 
