--- a/booking.html
+++ b/booking.html
@@ -57,7 +57,7 @@
 
         <div class="one-container two">
             <div class="one-container-image">
-                <img src="/IMG/STWKBOOKING7.jpg" alt="" class="one-container-image__image">
+                <img src="/IMG/STWKBOOKING7.png" alt="" class="one-container-image__image">
             </div>
 
             <div class="one-container-image">
