--- a/booking.html
+++ b/booking.html
@@ -71,6 +71,47 @@
 
     </section>
 
+    <div class="s-container" id="stockholm">
+        <div class="s-header">
+            <h2>Stockholm</h2>
+        </div>
+
+        <div class="s-gallery">
+            <div class="s-gallery-container">
+                <div class="gallery-item" data-index="0">
+                    <img src="/IMG/DSC_1836.JPG" alt="">
+                </div>
+                <div class="gallery-item" data-index="1">
+                    <img src="/IMG/DSC_1548.jpg" alt="">
+                </div>
+                <div class="gallery-item" data-index="2">
+                    <img src="/IMG/grey_flower.jpg" alt="">
+                </div>
+            </div>
+            <div class="five-gallery-controls">
+                <button class="five-gallery-prev">
+                    <svg class="five-slideshow-arrow" viewBox="0 0 26 40" style="transform: scaleX(-1) scale(0.3125);">
+                        <g transform="translate(-35, -28)" fill-rule="evenodd">
+                            <polygon points="60.4571429 47.8 40.6571429 67.6 35 61.9428571 49.1433951 47.7994621 35 33.6571429 40.6571429 28"></polygon>
+                        </g>
+                    </svg>
+                </button>
+                <button class="five-gallery-next">
+                    <svg class="five-slideshow-arrow" viewBox="0 0 26 40" style="transform: scale(0.3125);">
+                        <g transform="translate(-35, -28)" fill-rule="evenodd">
+                            <polygon points="60.4571429 47.8 40.6571429 67.6 35 61.9428571 49.1433951 47.7994621 35 33.6571429 40.6571429 28"></polygon>
+                        </g>
+                    </svg>
+                </button>
+            </div>
+            <div class="five-gallery-dots">
+                <div class="gallery-dot active" data-index="0"></div>
+                <div class="gallery-dot" data-index="1"></div>
+                <div class="gallery-dot" data-index="2"></div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="/JS/main.js"></script>
