STWKBOOKING + new picture

--- a/booking.html
+++ b/booking.html
@@ -64,11 +64,6 @@
                 <img src="/IMG/STWKBOOKING7.jpg" alt="" class="one-container-image__image">
             </div>
         </div>
-
-        <div class="image2">
-            <img src="/IMG/STWKBOOKING5.png" alt="">
-        </div>
-
     </section>
 
     <div class="s-container" id="stockholm">
@@ -79,7 +74,7 @@
         <div class="s-gallery">
             <div class="s-gallery-container">
                 <div class="gallery-item" data-index="0">
-                    <img src="/IMG/DSC_1836.JPG" alt="">
+                    <img src="/IMG/STWKBOOKING8.jpg" alt="">
                 </div>
                 <div class="gallery-item" data-index="1">
                     <img src="/IMG/DSC_1548.jpg" alt="">
